<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeWork05</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="createAccount">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="view_all">View All</string>
    <string name="view_favorites">View Favorites</string>
    <string name="clear_favorites">Clear Favorites</string>
    <string name="view_shared">View Shared</string>
    <string name="clear_shared">Clear Shared</string>
    <string name="logout">Logout</string>
    <string name="title_activity_pre_view">PreViewActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>

</resources>
