<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/action_view_all"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/view_all"/>

    <item
        android:id="@+id/action_view_favorites"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/view_favorites"/>
    <item
        android:id="@+id/action_clear_favorites"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/clear_favorites"/>
    <item
        android:id="@+id/action_view_shared"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/view_shared"/>
     <item
        android:id="@+id/action_clear_shared"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clear_shared"/>
     <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>
